--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -15,6 +15,11 @@
     margin: 0;
     padding: 0;
   }
+
+  .mealsError {
+    text-align: center;
+    color: red;
+  }
   
   @keyframes meals-appear {
     from {
